name:                vfix
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see readme.md
homepage:            https://github.com/githubuser/vfix#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable vfix
  hs-source-dirs:      src
                     , src/Grammar
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       PrettyPrint
                     , CharacterSets
                     , BasicTypes
                     , Classes
                     , Utils
                     , Basic
                     , Decorator
                     , Level4
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , QuickCheck
                     , text
                     , lens
                     , quickcheck-instances
                     , containers
                     , unordered-containers
                     , generics-eot
                     , MissingH
                     , ansi-terminal
                     , prettyprinter
                     , parser-combinators
