name:                vfix
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see readme.md
homepage:            https://github.com/githubuser/vfix#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , src/Grammar
  default-language:    Haskell2010
  other-modules:       BasicTypes, Classes, Level4
  build-depends:       base >= 4.7 && < 5
                      , megaparsec
                      , text
